# qwen-speech-mlx

./: .gitignore  Makefile  README.md  README_zh.md  SKILL.md  launch.sh  pyproject.toml
examples/: test_asr.py  test_tts.py
qwen_speech/: __init__.py  asr.py  tts.py
