[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen-speech-mlx"
version = "0.2.0"
description = "Local TTS + ASR services for Apple Silicon, powered by Qwen3 and MLX"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.0",
    "huggingface-hub>=0.34.0",
    "python-multipart>=0.0.22",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "transformers>=5.0.0rc3",
    "uvicorn>=0.40.0",
    "mlx-audio",
]

[project.scripts]
qwen-tts = "qwen_speech.tts:main"
qwen-asr = "qwen_speech.asr:main"

[tool.uv.sources]
mlx-audio = { git = "https://github.com/Blaizzy/mlx-audio.git", rev = "64e0862f07e3ce80637382a4964340a6a09198ff" }

[tool.setuptools.packages.find]
include = ["qwen_speech*"]

[tool.setuptools.package-data]
qwen_speech = ["prompts/*.wav"]
